--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 height:100px;
 background: #DFF2EB;
 margin: auto;
-align-content: center;
+align-content: cen;
 text-align: center;
 }
 
@@ -80,6 +80,17 @@ border: 2px solid black;
 	width: auto;
 	height: 100%;
 	background: #7AB2D3;
+	border-radius: 10%;
+	border: 2px solid black;
+	text-align: center;
+	align-content: center;
+}
+
+.InfoblockOnMouseVersion{
+	box-sizing: border-box;
+	width: auto;
+	height: 100%;
+	background: #036096;
 	border-radius: 10%;
 	border: 2px solid black;
 	text-align: center;
